fix: example petstore to like reference
